crates/strider-analyze/tests/snapshots/ppc32be__patterns__loop_with_invariant_load.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "v2" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "3" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "3" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v4" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "3" -> "v4" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "1" -> "3" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "5" -> "3" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "6" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v4" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "6" [color="#88cc88", label=r3, fontcolor="#cccccc", fontsize=9];
  "9" -> "6" [color="#88cc88", label=r4, fontcolor="#cccccc", fontsize=9];
  "10" -> "6" [color="#88cc88", label=f1, fontcolor="#cccccc", fontsize=9];
  "11" -> "6" [color="#88cc88", label=f2, fontcolor="#cccccc", fontsize=9];
  "11" [label="init\nf2", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="init\nf1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="arg[1] ← r4", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "12" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "8" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "13" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "14" -> "13" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "15" -> "13" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "15" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "16" -> "15" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "15" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "17" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "17" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "18" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "17" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "19" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "20" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "20" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "16" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "16" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "23" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "24" -> "23" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "24" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "24" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "24" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "26" [label="const 0xffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "25" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="φ Mem", shape=house, fillcolor="#163030"];
  "1" -> "7" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "27" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "29" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v30" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v30" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "29" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "7" -> "29" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "29" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "29" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "32" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "27" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "27" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "34" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "32" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "35" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v36" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v36" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "37" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "35" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "38" -> "35" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v39" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v39" -> "35" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "9" -> "35" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "38" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "40" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v41" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v41" -> "38" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "42" -> "38" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "42" [label="arg[0] ← r3", shape=Mdiamond, fillcolor="#1a3a5c"];
  "40" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "45" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="init\nr31", shape=Mdiamond, fillcolor="#1a3a5c"];
  "43" [label="StackStore u32\n→ ram[sp - 48]", shape=box3d, fillcolor="#20182a"];
  "46" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v47" [label="init\nr1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v47" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "46" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "14" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "48" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "48" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "14" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "5" [label="Cast → bool\nfrom u8", shape=box, fillcolor="#2d2d2d"];
  "49" -> "5" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "49" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "50" -> "49" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "49" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "50" [label="ShiftRight:u8", shape=box, fillcolor="#2d2d2d"];
  "52" -> "50" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "53" -> "50" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "53" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "52" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "54" -> "52" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "52" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="And:u8", shape=box, fillcolor="#2d2d2d"];
  "56" -> "55" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "57" -> "55" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "57" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "56" [label="init\nxer_so", shape=Mdiamond, fillcolor="#1a3a5c"];
  "54" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "58" -> "54" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "59" -> "54" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "59" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "60" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "60" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "62" -> "60" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "62" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "62" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "62" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "64" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "7" -> "64" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "65" -> "64" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "65" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "25" -> "65" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "66" -> "65" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "66" [label="const 0xffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="φ Val", shape=house, fillcolor="#163030"];
  "1" -> "63" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "67" -> "63" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" -> "63" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "58" [label="Or:u8", shape=box, fillcolor="#2d2d2d"];
  "68" -> "58" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "69" -> "58" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "69" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "70" -> "69" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "71" -> "69" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x2:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "70" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "72" -> "70" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "72" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "64" -> "72" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "63" -> "72" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "68" [label="ShiftLeft:u8", shape=box, fillcolor="#2d2d2d"];
  "73" -> "68" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "74" -> "68" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x3:u8", shape=ellipse, fillcolor="#2d2d2d"];
  "73" [label="Cast → u8\nfrom bool", shape=box, fillcolor="#2d2d2d"];
  "75" -> "73" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "75" [label="Sless\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "63" -> "75" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "64" -> "75" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
}
